# IMGUI_Renderer

./: CMakeLists.txt  xmake.lua
data_yarn/: fiber_random.txt  spline_points.txt  yarn_start.txt
data_yarn/glsl/: CubicBSpline.frag  CubicBSpline.tcs  CubicBSpline.tes  CubicBSpline.vert  checkerboard.fs.glsl  checkerboard.vs.glsl  color.vert  depth.frag  depthbuffer.frag  depthview.frag  depthview.vert  downsample.frag  downsample.vert  framebuffer.frag  framebuffer.vert  fuzzy.frag  fuzzy.geom  hair.frag  hair.geom  hair.vert  hairmesh.frag  hairmeshverts.frag  hairroots.frag  hairroots.vert  hairshadow.frag  head.frag  head.vert  normal.vert  offlineCore.frag  offlineCore.geom  offlineCoreT.frag  offlineCoreT.geom  offlineYarn.frag  offlineYarn.geom  offlineYarn.vert  shadowmapping-light-view.fs.glsl  yarn.frag  yarn.geom  yarn.vert  yarn_tes.frag  (+16 more)
data_yarn/precompute/: Integral.txt  fit.txt  fit_studio_small.txt  reallife_data.txt  teapot.txt
data_yarn/rib_handles/rib_handles/: .gitignore
src/: Curve.h  ShaderTypes.h  aabb.h  camera.cpp  camera.h  cyPoint.h  cyYarnFile.h  fiber.cpp  fiber.h  lodepng.cpp  lodepng.h  main.cpp  maths.h  parallel.cpp  parallel.h  rendering_API.cpp  rendering_API.h  yarn.cpp  yarn.h
